# screenshotmaker

./: .gitignore  CMakeLists.txt  all_code.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  screenshotcapturer.cpp  screenshotcapturer.h  screenshotcapturer_adapter.cpp  screenshotcapturer_adapter.h
app/: mainwindow.cpp  mainwindow.h  mainwindow.ui  screenshotviewer.cpp  screenshotviewer.h
capture/: capturemanager.cpp  capturemanager.h  fullscreencapturestrategy.cpp  fullscreencapturestrategy.h  icapturestrategy.h  rectanglecapturestrategy.cpp  rectanglecapturestrategy.h  rectangleselectionoverlay.cpp
controllers/: screenshotcontroller.cpp  screenshotcontroller.h
core/: editcommand.h  screenshotcontext.cpp  screenshotcontext.h
services/: clipboardservice.cpp  clipboardservice.h  fileexportservice.cpp  fileexportservice.h  imageprocessingservice.cpp  imageprocessingservice.h
ui/: rectanglesselectionoverlay.cpp  rectanglesselectionoverlay.h  selectionvisualizer.cpp  selectionvisualizer.h
